--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 			<version>4.3</version>
 		</dependency>
 
+		<dependency><!--redis-->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-redis</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
