--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,9 @@ spring:
       max-idle: 8 # 连接池中的最大空闲连接
       min-idle: 0 # 连接池中的最小空闲连接
     timeout: 0 # 连接超时时间（毫秒）
+  data:
+    mongodb: #MONGODB
+      host: localhost
+      port: 27017
+      database: test
+
