create one micro service ms-course, and add eurake serve

--- a/ms-course/pom.xml
+++ b/ms-course/pom.xml
@@ -17,5 +17,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
+
+        <dependency><!--mongodb, 它的实现依赖spring-data-mongodb-->
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
     </dependencies>
 </project>
