add microservice ms-path, and add ribbon client balance

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <modules>
         <module>eurake-server</module>
         <module>ms-course</module>
+        <module>ms-path</module>
     </modules>
     <packaging>pom</packaging>
 
