--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>ms-course</module>
         <module>ms-path</module>
         <module>ms-user</module>
+        <module>ms-exam</module>
     </modules>
     <packaging>pom</packaging>
 
