--- a/ms-path/pom.xml
+++ b/ms-path/pom.xml
@@ -24,12 +24,13 @@
         </dependency>
 
         <!--整合Hystrix-->
+        <!--其实feign中自带了hystrix，引入该依赖主要是为了使用其中的hystrix-metrics-event-stream，用于dashboard-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix</artifactId>
         </dependency>
 
-        <!--整合feign-->
+        <!--整合feign, 其实feign中自带了hystrix-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
