add config server, and add config client for ms-course.

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>ms-user</module>
         <module>ms-exam</module>
         <module>ms-gateway</module>
+        <module>config-server</module>
     </modules>
     <packaging>pom</packaging>
 
