--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -11,3 +11,11 @@ spring:
           search-paths: config-repo                                 # git仓库地址下的相对地址，可以配置多个，用,分割
           username:                                                 # git仓库的账号
           password:                                                 # git仓库的密码
+
+eureka:
+  instance:
+    hostname: config-server
+  client:
+    serverUrl:
+#      defaultZone: http://discovery:8761/eureka/    # 指定注册中心的地址
+      defaultZone: http://127.0.0.1:8761/eureka/    # 指定注册中心的地址
