--- a/ms-course/src/main/resources/bootstrap.yml
+++ b/ms-course/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: ms-course     # 对应ms-config-server所获取的配置文件的{application}
   cloud:
     config:
-#      uri: http://ms-config-server:8030/
-      uri: http://localhost:8030/
+#      uri: http://config-server:8030/
+      uri: http://127.0.0.1:8030/
       profile: dev      # 指定profile，对应ms-config-server所获取的配置文件中的{profile}
       label: master     # 指定git仓库的分支，对应ms-config-server所获取的配置文件的{label}
