--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>ms-exam</module>
         <module>ms-gateway</module>
         <module>config-server</module>
+        <module>ms-questionnaire</module>
     </modules>
     <packaging>pom</packaging>
 
