--- a/ms-questionnaire/src/main/resources/bootstrap.yml
+++ b/ms-questionnaire/src/main/resources/bootstrap.yml
@@ -6,13 +6,13 @@ spring:
       profile: dev
       label: master
       discovery:
-        enabled: true                 # 默认false，设为true表示使用注册中心中的configserver配置而不自己配置configserver的uri
-        serviceId: ms-config-server   # 指定config server在服务发现中的serviceId，默认为：configserver
+        enabled: true                # 默认false，设为true表示使用注册中心中的configserver配置而不自己配置configserver的uri
+        serviceId: ms-config-server  # 指定config server在服务发现中的serviceId，默认为：configserver
 
 eureka:
   client:
     serviceUrl:
 #      defaultZone: http://discovery:8761/eureka/    # 指定注册中心的地址
       defaultZone: http://127.0.0.1:8761/eureka/    # 指定注册中心的地址
-  instance:
-    preferIpAddress: true
+#  instance:
+#    preferIpAddress: true
