--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>spring-boot-init</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
     <modules>
-        <module>eurake-server</module>
+        <module>eureka-server</module>
         <module>ms-course</module>
         <module>ms-path</module>
         <module>ms-user</module>
@@ -78,11 +78,6 @@
 			<groupId>edu.uci.ics</groupId>
 			<artifactId>crawler4j</artifactId>
 			<version>4.3</version>
-		</dependency>
-
-		<dependency><!--redis-->
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-redis</artifactId>
 		</dependency>
 
         <dependency>
