--- a/ms-questionnaire/src/main/resources/application.yml
+++ b/ms-questionnaire/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
   port: 8013
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/test
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: root
