--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>ms-gateway</module>
         <module>config-server</module>
         <module>ms-questionnaire</module>
+        <module>ms-train</module>
     </modules>
     <packaging>pom</packaging>
 
