add ms-rabbitmq microservice, and add basic rabbitmq example.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>config-server</module>
         <module>ms-questionnaire</module>
         <module>ms-train</module>
+        <module>ms-rabbitmq</module>
     </modules>
     <packaging>pom</packaging>
 
