add microservice ms-search, and add 'add path' and 'query path' interface

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>ms-questionnaire</module>
         <module>ms-train</module>
         <module>ms-rabbitmq</module>
+        <module>ms-search</module>
     </modules>
     <packaging>pom</packaging>
 
