auto refresh config for ms-questionnaire.

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -12,6 +12,16 @@ spring:
           username:                                                 # git仓库的账号
           password:                                                 # git仓库的密码
 
+    ### spring cloud config server 中加入spring cloud bus 实现config的自动刷新
+    bus:
+      trace:
+        enabled: true        #开启cloud bus 跟踪
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: springcloud
+    password: 123456
+
 eureka:
   client:
     serverUrl:
