--- a/ms-questionnaire/src/main/resources/bootstrap.yml
+++ b/ms-questionnaire/src/main/resources/bootstrap.yml
@@ -9,6 +9,12 @@ spring:
         enabled: true                # 默认false，设为true表示使用注册中心中的configserver配置而不自己配置configserver的uri
         serviceId: ms-config-server  # 指定config server在服务发现中的serviceId，默认为：configserver
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: springcloud
+    password: 123456
+
 eureka:
   client:
     serviceUrl:
